2006-07-26  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicToolBarUI.java
	(ToolBarAction): New inner class for handling keyboard
	actions.
	(installKeyboardActions): Implemented.
	(getActionMap): New helper method.
	(createDefaultActions): New helper method.
	(installListeners): Install focus listener on toolbar's
	children, rather than the toolbar itself.
	(navigateFocusedComp): Implemented.
	(uninstallKeyboardActions): Implemented.
	(uninstallListeners): Uninstall focus listener from
	toolbar's children, rather than the toolbar itself.
	(ToolBarContListener.componentAdded): Install focus
	listener on added child.
	(ToolBarContListener.componentRemoved): Uninstall focus
	listener from removed child.
	(ToolBarFocusListener.ToolBarFocusListener): Nothing to do here.
	(ToolBarFocusListener.focusGained): Implemented.
	(ToolBarFocusListener.focusLost): Implemented.

2006-07-26  Roman Kennke  <kennke@aicas.com>

	* java/awt/DefaultKeyboardFocusManager.java
	(dispatchEvent): Notify old focus owner when it has lost
	focus.

2006-07-26  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicTableUI.java
	(FocusHandler.focusGained): Implemented to refresh the
	lead cell.
	(FocusHandler.focusLost): Implemented to refresh the
	lead cell.
	(FocusHandler.repaintLeadCell): New helper method.
	(MouseInputHandler.mouseEntered): Do nothing here.
	(MouseInputHandler.mouseExited): Do nothing here.
	(MouseInputHandler.mouseMoved): Do nothing here.
	(installKeyboardActions): Rewritten to use a shared InputMap
	and ActionMap and correctly install the maps via SwingUtilities
	methods.
	(getActionMap): New helper method.
	(createDefaultActions): New helper method.
	(ActionListenerProxy): Removed unneeded class.
	(TableAction): Made class static.
	(TableAction.actionPerformed): Determine table by fetching
	the event source. Pass the table to helper methods.
	Use __command__ hack to determine the action command.